# mothership

./: .gitignore  README.md
flightcontroller/: README.txt  platformio.ini
flightcontroller/include/: compass.h  config.h  debugger.h  dps310.h  frame_manager.h  gps.h  imu.h  kalman.h  motor.h  opticalflow.h  pid.h  receiver.h  rpi.h  utils.h
flightcontroller/include/sensor/: alt.h  imu.h
flightcontroller/include/utils/: debugger.h  utils.h
flightcontroller/lib/: libmothership.lnk
flightcontroller/src/: compass.cpp  debugger.cpp  dps310.cpp  imu.cpp  kalman.cpp  main.cpp  motor.cpp  opticalflow.cpp  pid.cpp  receiver.cpp  rpi.cpp  utils.cpp
flightcontroller/src/sensor/: alt.cpp  imu.cpp
flightcontroller/src/utils/: debugger.cpp  utils.cpp
libmothership/: CMakeLists.txt  README.md
libmothership/include/: dataexchange.h  message_queue.h  network.h
libmothership/libmothership/: CMakeLists.txt  library.json
libmothership/libmothership/include/: dataexchange.h  mav_eskf.h  msvector.h  network.h  platforms.h  quatern_eskf.h  quaternion.h
libmothership/libmothership/include/BasicLinearAlgebra/: BasicLinearAlgebra.h
libmothership/libmothership/include/BasicLinearAlgebra/impl/: NotSoBasicLinearAlgebra.h
libmothership/libmothership/include/network/: network.h
libmothership/libmothership/python/: eskf.py  eskf_s.py  eskf_test.py  plotest.py
libmothership/libmothership/src/data/: dataexchange.cpp
libmothership/libmothership/src/eskf/: mav_eskf.cpp  quatern_eskf.cpp
libmothership/libmothership/src/quaternion /: msvector.cpp  quaternion.cpp
libmothership/libmothership/test/: network.cpp  test_jacobian.cpp  test_quaternion.cpp  test_quaternion2.cpp  test_vector3.cpp
libmothership/src/: dataexchange.cpp
libmothership/test/: dexch.cpp  network.cpp  test.cpp
mission_control/: CMakeLists.txt  example_config.json
mission_control/include/ui/: flightdisplay.h  leftbar.h  maintab.h  mainui.h  mapview.h  menubar.h  style.h  tabbar.h  topbar.h
mission_control/resources/: googlemaps.html  resources.qrc
mission_control/src/: main.cpp
mission_control/src/ui/: flightdisplay.cpp  leftbar.cpp  maintab.cpp  mainui.cpp  mapview.cpp  menubar.cpp  style.cpp  tabbar.cpp  topbar.cpp
